# GekkoNet

./: .clang-tidy  .cmake-format.json  .editorconfig  .gitignore  CMakeLists.txt  Directory.Build.props  GUIDE.md  GekkoNet.sln  LICENSE  README.md
.github/workflows/: deploy.yml  release.yml  run.yaml  unix.yml  windows.yml
Examples/FakeOnlineSession/: FakeOnlineSession.cpp  FakeOnlineSession.vcxproj  FakeOnlineSession.vcxproj.filters
Examples/FakeOnlineSessionSpectating/: FakeOnlineSessionSpectating.cpp  FakeOnlineSessionSpectating.vcxproj  FakeOnlineSessionSpectating.vcxproj.filters
Examples/GekkoGame/: GekkoGame.vcxproj  GekkoGame.vcxproj.filters  vcpkg.json
Examples/GekkoGame/include/: game.h
Examples/GekkoGame/src/: game.cpp
Examples/LocalSession/: LocalSession.cpp  LocalSession.vcxproj  LocalSession.vcxproj.filters  run.bat  vcpkg.json
Examples/OnlineSession/: OnlineSession.cpp  OnlineSession.vcxproj  OnlineSession.vcxproj.filters  run.bat
Examples/Sliders/: Sliders.cpp  Sliders.vcxproj  Sliders.vcxproj.filters  run.bat
Examples/SpectatorSession/: SpectatorSession.cpp  SpectatorSession.vcxproj  SpectatorSession.vcxproj.filters  run.bat
Examples/StressSession/: StressSession.cpp  StressSession.vcxproj  StressSession.vcxproj.filters  run.bat
GekkoLib/: CMakeLists.txt  GekkoLib.vcxproj  GekkoLib.vcxproj.filters  backend.cpp  backend.h  event.cpp  event.h  gekko.cpp  gekko.h  gekko_types.h  input.cpp  input.h  main.cpp  net.cpp  net.h  net_adapter.h  player.cpp  player.h  storage.cpp  storage.h  sync.cpp  sync.h
GekkoLib/include/: backend.h  common.h  compression.h  event.h  game_session.h  gekko.h  gekko_types.h  gekkonet.h  input.h  net.h  replay.h  session.h  storage.h  stress_session.h  sync.h
GekkoLib/include/private/: backend.h  input.h  net.h  session.h  sync.h
GekkoLib/src/: backend.cpp  event.cpp  game_session.cpp  gekko.cpp  gekkonet.cpp  input.cpp  net.cpp  player.cpp  replay.cpp  spectator_session.cpp  storage.cpp  stress_session.cpp  sync.cpp
dep/raylib-cpp-5.0.1/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  raylib_cpp.sln
dep/raylib-cpp-5.0.1/examples/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  audio_music_stream.vcxproj  audio_music_stream.vcxproj.filters  audio_sound_loading.vcxproj  audio_sound_loading.vcxproj.filters  cmake_install.cmake  core_basic_window.vcxproj  core_basic_window.vcxproj.filters  core_basic_window_web.vcxproj  core_basic_window_web.vcxproj.filters  core_drop_files.vcxproj  core_drop_files.vcxproj.filters  core_input_mouse.vcxproj  core_input_mouse.vcxproj.filters  core_loading_thread.vcxproj  core_loading_thread.vcxproj.filters  core_random_values.vcxproj  core_random_values.vcxproj.filters  core_window_letterbox.vcxproj  core_window_letterbox.vcxproj.filters  core_world_screen.vcxproj  core_world_screen.vcxproj.filters  models_billboard.vcxproj  models_billboard.vcxproj.filters  models_first_person_maze.vcxproj  models_first_person_maze.vcxproj.filters  multiple.vcxproj  multiple.vcxproj.filters  shaders_texture_waves.vcxproj  shaders_texture_waves.vcxproj.filters  shapes_collision_area.vcxproj  shapes_collision_area.vcxproj.filters  shapes_logo_raylib.vcxproj  shapes_logo_raylib.vcxproj.filters  text_font_filters.vcxproj  (+13 more)
dep/raylib-cpp-5.0.1/include/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
dep/raylib-cpp-5.0.1/tests/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  raylib_cpp_test.vcxproj  raylib_cpp_test.vcxproj.filters
example/: example.cpp  example.vcxproj  example.vcxproj.filters
